fix(core/form): avoid control section of form field stretched while full width

--- a/packages/core/src/form/_form-field-styles.scss
+++ b/packages/core/src/form/_form-field-styles.scss
@@ -20,12 +20,14 @@ $message-gap: 4px !default;
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   margin-bottom: $preserve-margin-bottom;
 
   &__label {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    width: 100%;
     margin-bottom: $label-gap;
     color: palette.color(action-inactive);
 
